# kspotify

./: CHANGELOG.md  CMakeLists.txt  kspotify.colors  kspotify.notifyrc  org.kde.kspotify.desktop  release-please-config.json
.github/: release-please-config.json
.github/workflows/: build.yml
src/: CMakeLists.txt  kspotifyui.rc  main.cpp  mainwindow.cpp  mainwindow.h
